[gd_scene load_steps=13 format=2]

[ext_resource path="res://materials/White.material" type="Material" id=1]
[ext_resource path="res://materials/road.material" type="Material" id=2]
[ext_resource path="res://world/crowd/AudiencePerson.gd" type="Script" id=3]
[ext_resource path="res://materials/Grey.material" type="Material" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 0.9

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.3, 0.2, 0.3 )

[sub_resource type="SphereMesh" id=3]
material = ExtResource( 1 )
radius = 0.4
height = 0.8
radial_segments = 6
rings = 2

[sub_resource type="QuadMesh" id=4]
material = ExtResource( 2 )
size = Vector2( 0.4, 0.2 )

[sub_resource type="QuadMesh" id=5]
material = ExtResource( 2 )
size = Vector2( 0.3, 0.3 )

[sub_resource type="SphereMesh" id=6]
radius = 0.5
height = 0.7
radial_segments = 6
rings = 3

[sub_resource type="CylinderMesh" id=7]
resource_local_to_scene = true
top_radius = 0.3
bottom_radius = 0.4
height = 1.2
radial_segments = 5
rings = 1

[sub_resource type="CylinderMesh" id=8]
top_radius = 0.1
bottom_radius = 0.1
height = 0.8
radial_segments = 4
rings = 1

[node name="AudiencePerson" type="RigidBody"]
can_sleep = false
script = ExtResource( 3 )

[node name="BulkShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -5.96046e-08, 0 )
shape = SubResource( 1 )

[node name="BaseShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.8, 0 )
shape = SubResource( 2 )

[node name="Head" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="Eyes" type="MeshInstance" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.269096 )
mesh = SubResource( 4 )
material/0 = null

[node name="Mouth" type="MeshInstance" parent="Head"]
transform = Transform( 0.707107, 0.707107, 0, -0.661881, 0.661881, 0.351891, 0.248824, -0.248824, 0.936041, 0, -0.181558, 0.269096 )
mesh = SubResource( 5 )
material/0 = null

[node name="Hair" type="MeshInstance" parent="Head"]
transform = Transform( 1, 0, 0, 0, 0.65511, 0.755533, 0, -0.755533, 0.65511, 0, 0.128599, -0.053163 )
visible = false
mesh = SubResource( 6 )
material/0 = ExtResource( 4 )

[node name="Hair2" type="MeshInstance" parent="Head/Hair"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.103314, -0.353253 )
visible = false
mesh = SubResource( 6 )
material/0 = ExtResource( 4 )

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, 0 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="RightArm" type="MeshInstance" parent="Body"]
transform = Transform( 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, -0.4, 0.7, 0 )
mesh = SubResource( 8 )
material/0 = null

[node name="LeftArm" type="MeshInstance" parent="Body"]
transform = Transform( 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, 0.4, 0.7, 0 )
mesh = SubResource( 8 )
material/0 = null

[node name="JumpTimer" type="Timer" parent="."]

[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
